# Cpp_Design_Projects

./: README.md
archive_system/: Archive.cpp  Archive.hpp  CMakeLists.txt  Testing.hpp  main.cpp
json_processor/: CMakeLists.txt  student.json
json_processor/Source/: DebugFunctions.cpp  Model.cpp  Model.h  TypeChecker.cpp  main.cpp
string_class/: Assignment_2  CMakeLists.txt  student.json
string_class/Source/: BufferManager.hpp  String.hpp  autotest.hpp  main  main.cpp
variants/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  students.json
variants/Source/: TestVariant  TestVariant.cpp  TestVariant.h  Testable.h  Variant.cpp  Variant.h  main.cpp  temp.cpp
variants/tests/: TestVariant.cpp  TestVariant.h
